# mobee-liquidity-otc-service

./: .dockerignore  .env.example  .gitignore  .sql  CLAUDE.md  README.md  main.py  pyproject.toml  startup.sh
scripts/: run_all_ingest.py
src/client/: binance.py  clickhouse.py  evmscan.py  fireblocks.py  gate.py  spreadsheet.py  tronscan.py
src/core/: app_config.py  config.example.yaml  config.py
src/db/: base.py  clickhouse.py  clickhouse_conn.py  conn.py  datadb.py
src/db/clickhouse/: __init__.py  engine.py  session.py
src/db/postgres/: __init__.py  engine.py  session.py
src/domain/entity/: balance.py  evmscan.py  fireblocks.py  ingest.py  tronscan.py
src/domain/interface/: balance.py
src/repository/: balance_diff.py  balance_ingest.py  liquidity.py  liquidity_net_position.py  price_quote.py
src/service/: balance_difference.py  balance_ingest.py  cw_balance.py  cw_evm_balance.py  fireblocks.py  liquidity_snapshot.py  run_all_ingest.py  tronscan.py
src/service/platform/: binance.py  cold_wallet_balance.py  evmscan.py  fireblocks.py  gate.py  spreadsheet.py
src/utils/: path.py
tasks/: ingest_otc_balance.py
tests/: conftest.py  test_balance.py  test_evm_service.py  test_evmscan.py  test_fireblocks.py  test_interface.py  test_spreadsheet.py  test_tron_service.py  test_tronscan.py
