[project]
name = "mobee-liquidity-otc-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binance>=0.3.111",
    "binance-connector>=3.13.0",
    "clickhouse-connect>=1.3.0",
    "clickhouse-sqlalchemy>=0.3.2",
    "fireblocks-sdk>=2.17.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pygsheets>=2.0.6",
    "python-okx>=0.4.1",
    "pyyaml>=6.0.3",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
